--- a/smart-exchange-frnt/src/app/cliente/operacion/operacion.component.html
+++ b/smart-exchange-frnt/src/app/cliente/operacion/operacion.component.html
@@ -1,4 +1,4 @@
-<mat-card class="cuentas-bancarias-card">
+<mat-card class="operacion-card">
     <mat-card-header>
         <span class="cierra-componente accent-color">
             <mat-icon (click)="close(false)" matTooltip="Cerrar">cancel</mat-icon>
@@ -11,56 +11,58 @@
                 <mat-step [stepControl]="cuentasFormGroup" [editable]="isEditable">
                   <form [formGroup]="cuentasFormGroup">
                     <ng-template matStepLabel>Origen cuenta y destino</ng-template>
-                    <mat-card>
-                        <mat-card-header>
-                          <mat-card-subtitle>¿De dónde nos envías tu dinero?</mat-card-subtitle>
-                          <button (click)="agregaCuentasBancarias()" mat-raised-button color="primary" class="peque-btn">Agregar cuentas</button>
-                        </mat-card-header>
-                        <mat-card-content>
-                            <mat-form-field appearance="outline">
-                                <mat-label>Banco</mat-label>
-                                <mat-select formControlName="bancoOrigen">
-                                  <mat-option *ngFor="let item of bancos" [value]="item.id">
-                                    {{item.nombre}}
-                                  </mat-option>
-                                </mat-select>
-                            </mat-form-field>
-                            <mat-form-field appearance="outline">
-                                <mat-label>Cuenta</mat-label>
-                                <mat-select formControlName="cuentaOrigen">
-                                  <mat-option *ngFor="let item of cuentasRegistradas" [value]="item.codigo">
-                                    {{item.nombre}}
-                                  </mat-option>
-                                </mat-select>
-                            </mat-form-field>
-                        </mat-card-content>
-                    </mat-card>
-                    <mat-card>
-                        <mat-card-header>
-                          <mat-card-subtitle>¿Dónde quieres recibir tu dinero?</mat-card-subtitle>
-                          <button (click)="agregaCuentasBancarias()" mat-raised-button color="primary" class="peque-btn">Agregar cuentas</button>
-                        </mat-card-header>
-                        <mat-card-content>
-                            <mat-form-field appearance="outline">
-                                <mat-label>Banco</mat-label>
-                                <mat-select formControlName="bancoDestino">
-                                  <mat-option *ngFor="let item of bancos" [value]="item.id">
-                                    {{item.nombre}}
-                                  </mat-option>
-                                </mat-select>
-                            </mat-form-field>
-                            <mat-form-field appearance="outline">
-                                <mat-label>Cuenta</mat-label>
-                                <mat-select formControlName="cuentaDestino">
-                                  <mat-option *ngFor="let item of cuentasRegistradas" [value]="item.codigo">
-                                    {{item.nombre}}
-                                  </mat-option>
-                                </mat-select>
-                            </mat-form-field>
-                        </mat-card-content>
-                    </mat-card>
                     <div>
-                      <button mat-button matStepperNext>Next</button>
+                        <mat-card-subtitle>¿De dónde nos envías tu dinero?
+                            <button  (click)="agregaCuentasBancarias()" class="agrega-cuenta" type="button" mat-mini-fab color="primary" matTooltip="Agregás cuentas bancarias">
+                                <mat-icon>add_circle</mat-icon>
+                            </button>
+                        </mat-card-subtitle>
+                        <mat-form-field appearance="outline">
+                            <mat-label>Banco</mat-label>
+                            <mat-select formControlName="bancoOrigen">
+                                <mat-option *ngFor="let item of bancos" [value]="item.id">
+                                    <span class="option-banco-logo" style="display: flex; align-items: center;">
+                                        <img [src]="'assets/bancos/'+item.logo" class="option-banco-logo">
+                                        {{item.nombre}}
+                                    </span>
+                                </mat-option>
+                            </mat-select>
+                        </mat-form-field>
+                        <mat-form-field appearance="outline" class="select-cuenta">
+                            <mat-label>Cuenta</mat-label>
+                            <mat-select formControlName="cuentaOrigen">
+                                <mat-option *ngFor="let item of cuentasOrigen" [value]="item.id">
+                                {{item.nombre}} {{item.numeroCuenta}}
+                                </mat-option>
+                            </mat-select>
+                        </mat-form-field>
+                    </div>
+                    <mat-divider></mat-divider>
+                    <div>
+                        <mat-card-subtitle>¿Dónde quieres recibir tu dinero?
+                        </mat-card-subtitle>
+                        <mat-form-field appearance="outline">
+                            <mat-label>Banco</mat-label>
+                            <mat-select formControlName="bancoDestino">
+                                <mat-option *ngFor="let item of bancos" [value]="item.id">
+                                    <span class="option-banco-logo" style="display: flex; align-items: center;">
+                                        <img [src]="'assets/bancos/'+item.logo" class="option-banco-logo">
+                                        {{item.nombre}}
+                                    </span>
+                                </mat-option>
+                            </mat-select>
+                        </mat-form-field>
+                        <mat-form-field appearance="outline" class="select-cuenta">
+                            <mat-label>Cuenta</mat-label>
+                            <mat-select formControlName="cuentaDestino">
+                                <mat-option *ngFor="let item of cuentasDestino" [value]="item.id">
+                                    {{item.nombre}} {{item.numeroCuenta}}
+                                </mat-option>
+                            </mat-select>
+                        </mat-form-field>
+                    </div>
+                    <div class="botones-operacion">
+                        <button mat-fab extended color="primary" matStepperNext>Siguiente</button>
                     </div>
                   </form>
                 </mat-step>
@@ -88,8 +90,6 @@
                 </mat-step>
               </mat-stepper>
         </mat-card-content>
-        <mat-card-actions>
-        </mat-card-actions>
     <mat-card-footer>
         <mat-progress-bar *ngIf="estaCargando" mode="indeterminate"></mat-progress-bar>
     </mat-card-footer>
