--- a/smart-exchange-frnt/src/styles.sass
+++ b/smart-exchange-frnt/src/styles.sass
@@ -91,11 +91,12 @@ mat-form-field, mat-slide-toggle
 //     left: 4px !important
 // .grecaptcha-badge:hover
 //     width: 256px !important
-.mat-mdc-fab.mat-primary, .mat-mdc-mini-fab.mat-primary, .mat-mdc-raised-button.mat-primary
+.mat-mdc-fab.mat-primary, .mat-mdc-mini-fab.mat-primary, .mat-mdc-raised-button.mat-primary, .mat-step-icon
     --mdc-fab-icon-color: #ffffff
     --mat-mdc-fab-color: #ffffff
     --mat-mdc-raised-color: #ffffff
     --mdc-protected-button-label-text-color: #ffffff
+    color: #ffffff !important
 /////////////////////////LOGIN REGISTRO
 .loging-wrapper
     display: flex
@@ -160,3 +161,9 @@ mat-form-field, mat-slide-toggle
     width: 10em
     img
         width: 100%
+.option-banco-logo
+    display: flex
+    align-items: center
+    img
+        width: 2em
+        padding-right: 5px
