--- a/smart-exchange-frnt/src/app/cliente/operacion/operacion.component.sass
+++ b/smart-exchange-frnt/src/app/cliente/operacion/operacion.component.sass
@@ -7,3 +7,7 @@
     text-align: left
 .select-cuenta
     width: 18em
+.descripcion-cambio
+    border-radius: 0.4em
+    font-size: 0.6em
+    padding: 2px
