--- a/smart-exchange-frnt/src/app/cliente/operacion/operacion.component.html
+++ b/smart-exchange-frnt/src/app/cliente/operacion/operacion.component.html
@@ -4,15 +4,16 @@
             <mat-icon (click)="close(false)" matTooltip="Cerrar">cancel</mat-icon>
         </span>
       <!-- <mat-card-subtitle>Administración de</mat-card-subtitle> -->
-      <mat-card-title>Nueva operación</mat-card-title>
+      <mat-card-title>Nueva operación <small class="descripcion-cambio accent-background">{{cambio.monto}} {{recuperaNombre(cambio.origen.moneda)}} a {{cambio.cambiado}} {{recuperaNombre(cambio.destino.moneda)}}</small></mat-card-title>
     </mat-card-header>
         <mat-card-content>
             <mat-stepper linear #stepper>
+                <!-- CUENTAS -->
                 <mat-step [stepControl]="cuentasFormGroup" [editable]="isEditable">
                   <form [formGroup]="cuentasFormGroup">
                     <ng-template matStepLabel>Origen cuenta y destino</ng-template>
                     <div>
-                        <mat-card-subtitle>¿De dónde nos envías tu dinero?
+                        <mat-card-subtitle>¿De dónde nos envías tu dinero {{descripcionOrigenMoneda()}}?
                             <button  (click)="agregaCuentasBancarias()" class="agrega-cuenta" type="button" mat-mini-fab color="primary" matTooltip="Agregás cuentas bancarias">
                                 <mat-icon>add_circle</mat-icon>
                             </button>
@@ -20,7 +21,7 @@
                         <mat-form-field appearance="outline">
                             <mat-label>Banco</mat-label>
                             <mat-select formControlName="bancoOrigen">
-                                <mat-option *ngFor="let item of bancos" [value]="item.id">
+                                <mat-option *ngFor="let item of bancosOrigen" [value]="item.id">
                                     <span class="option-banco-logo" style="display: flex; align-items: center;">
                                         <img [src]="'assets/bancos/'+item.logo" class="option-banco-logo">
                                         {{item.nombre}}
@@ -31,7 +32,7 @@
                         <mat-form-field appearance="outline" class="select-cuenta">
                             <mat-label>Cuenta</mat-label>
                             <mat-select formControlName="cuentaOrigen">
-                                <mat-option *ngFor="let item of cuentasOrigen" [value]="item.id">
+                                <mat-option *ngFor="let item of cuentasOrigenActual" [value]="item.id">
                                 {{item.nombre}} {{item.numeroCuenta}}
                                 </mat-option>
                             </mat-select>
@@ -39,12 +40,12 @@
                     </div>
                     <mat-divider></mat-divider>
                     <div>
-                        <mat-card-subtitle>¿Dónde quieres recibir tu dinero?
+                        <mat-card-subtitle>¿Dónde quieres recibir tu dinero {{descripcionDestinoMoneda()}}?
                         </mat-card-subtitle>
                         <mat-form-field appearance="outline">
                             <mat-label>Banco</mat-label>
                             <mat-select formControlName="bancoDestino">
-                                <mat-option *ngFor="let item of bancos" [value]="item.id">
+                                <mat-option *ngFor="let item of bancosDestino" [value]="item.id">
                                     <span class="option-banco-logo" style="display: flex; align-items: center;">
                                         <img [src]="'assets/bancos/'+item.logo" class="option-banco-logo">
                                         {{item.nombre}}
@@ -66,22 +67,64 @@
                     </div>
                   </form>
                 </mat-step>
-                <mat-step [stepControl]="secondFormGroup" [editable]="isEditable">
-                  <form [formGroup]="secondFormGroup">
-                    <ng-template matStepLabel>Fill out your address</ng-template>
-                    <mat-form-field appearance="fill">
-                      <mat-label>Address</mat-label>
-                      <input matInput formControlName="secondCtrl" placeholder="Ex. 1 Main St, New York, NY"
-                             required>
-                    </mat-form-field>
-                    <div>
-                      <button mat-button matStepperPrevious>Back</button>
-                      <button mat-button matStepperNext>Next</button>
-                    </div>
-                  </form>
+
+                <!-- DATOS PERSONALES -->
+                <mat-step [stepControl]="personalForm" [editable]="isEditable" *ngIf="pedirDatospersonales()">
+                <form [formGroup]="personalForm" autocomplete="off">
+                    <ng-template matStepLabel>Datos personales</ng-template>
+                    <mat-card-content>
+                        <mat-form-field appearance="outline">
+                            <mat-label>Tipo documento</mat-label>
+                            <mat-select formControlName="tipoDocumento">
+                                <mat-option *ngFor="let item of tipoDocumentos" [value]="item.codigo">
+                                {{item.nombre}}
+                                </mat-option>
+                            </mat-select>
+                        </mat-form-field>
+                        <mat-form-field appearance="outline">
+                            <mat-label>Número documento</mat-label>
+                            <input matInput type="text" formControlName="nroDocumento">
+                        </mat-form-field>
+                        <mat-form-field appearance="outline">
+                            <mat-label>{{esPersona()?'Nombres':'Razón social'}}</mat-label>
+                            <input matInput type="text" formControlName="nombres">
+                        </mat-form-field>
+                <!--             <mat-form-field appearance="outline">
+                            <mat-label>Segundo nombre</mat-label>
+                            <input matInput type="text" formControlName="sNombre">
+                        </mat-form-field> -->
+                        <mat-form-field appearance="outline" *ngIf="esPersona()">
+                            <mat-label>Apellido paterno</mat-label>
+                            <input matInput type="text" formControlName="paterno">
+                        </mat-form-field>
+                        <mat-form-field appearance="outline" *ngIf="esPersona()">
+                            <mat-label>Apellido materno</mat-label>
+                            <input matInput type="text" formControlName="materno">
+                        </mat-form-field>
+                <!--             <mat-form-field appearance="outline">
+                            <mat-label>Teléfono</mat-label>
+                            <input matInput type="text" formControlName="telefono">
+                        </mat-form-field> -->
+                        <mat-form-field appearance="outline">
+                            <mat-label>Celular</mat-label>
+                            <input matInput type="text" formControlName="celular">
+                        </mat-form-field>
+                        <mat-slide-toggle formControlName="deAcuerdo" color="primary">Authorizo a LC Exchange a almacenar mis datos personales</mat-slide-toggle>
+                    </mat-card-content>
+                    <mat-card-actions>
+                        <button  matStepperPrevious mat-fab extended color="accent" [disabled]="estaCargando">
+                            Atrás
+                        </button>&nbsp;
+                        <button matStepperNext mat-fab extended color="primary" [disabled]="estaCargando || !estaDeAcuerdo()">
+                            Siguiente
+                        </button>
+                    </mat-card-actions>
+                </form>
                 </mat-step>
+
+                <!-- FINALIZANDO -->
                 <mat-step>
-                  <ng-template matStepLabel>Done</ng-template>
+                  <ng-template matStepLabel>Finalizando</ng-template>
                   <p>You are now done.</p>
                   <div>
                     <button mat-button matStepperPrevious>Back</button>
