--- a/smart-exchange-frnt/src/app/cliente/operacion/operacion.component.sass
+++ b/smart-exchange-frnt/src/app/cliente/operacion/operacion.component.sass
@@ -11,3 +11,24 @@
     border-radius: 0.4em
     font-size: 0.6em
     padding: 2px
+::ng-deep .mat-step-header[aria-selected="true"]
+    border-bottom: 2px solid #47be11
+.tranferencia
+    border: 1px solid #cacaca
+    text-align: justify
+    border-radius: 0.5em
+    padding: 1.5em
+    box-sizing: border-box
+    table
+        width: 80%
+        margin: auto
+        th
+            text-align: right
+        td
+            text-align: left
+.copiar
+    cursor: pointer
+.letra-pequena
+    float: right
+.mat-step-header
+    pointer-events: none
