--- a/smart-exchange-frnt/src/app/cliente/cuentas-bancarias/cuentas-bancarias.component.html
+++ b/smart-exchange-frnt/src/app/cliente/cuentas-bancarias/cuentas-bancarias.component.html
@@ -43,7 +43,11 @@
                 <mat-label>Ponle un nombre a tu cuenta</mat-label>
                 <input matInput type="text" formControlName="nombre">
             </mat-form-field>
-            <mat-slide-toggle formControlName="deAcuerdo" color="primary">Declaro que ésta cuenta es mía y authorizo a LC Exchange a almacenar estos datos para mis transacciones</mat-slide-toggle>
+            <mat-form-field appearance="outline" *ngIf="esOperador()">
+              <mat-label>RUC</mat-label>
+              <input matInput type="text" formControlName="ruc">
+          </mat-form-field>
+            <mat-slide-toggle formControlName="deAcuerdo" color="primary" *ngIf="esCliente()">Declaro que ésta cuenta es mía y authorizo a LC Exchange a almacenar estos datos para mis transacciones</mat-slide-toggle>
         </mat-card-content>
         <mat-card-actions>
         <button mat-fab extended color="primary" [disabled]="estaCargando || !estaDeAcuerdo()">
