--- a/smart-exchange-frnt/src/app/operaciones/tipo-cambio/tipo-cambio.component.html
+++ b/smart-exchange-frnt/src/app/operaciones/tipo-cambio/tipo-cambio.component.html
@@ -2,6 +2,14 @@
 <div class="contenido-general">
     <div class="tcForm">
         <form [formGroup]="tcForm" (ngSubmit)="registra()" autocomplete="off">
+          <mat-form-field appearance="outline">
+              <mat-label>Tipo</mat-label>
+              <mat-select formControlName="tipo">
+                  <mat-option *ngFor="let item of tipos" [value]="item.codigo">
+                      {{item.nombre}}
+                  </mat-option>
+              </mat-select>
+          </mat-form-field>
             <mat-form-field appearance="outline">
                 <mat-label>Fecha día/mes/año</mat-label>
                 <input formControlName="fecha"  matInput [matDatepicker]="picker">
@@ -38,6 +46,10 @@
     </div>
     <div class="tcTable">
         <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+          <ng-container matColumnDef="tipo">
+            <th mat-header-cell *matHeaderCellDef> Tipo </th>
+            <td mat-cell *matCellDef="let item"> {{recuperaTipo(item.tipo)}} </td>
+          </ng-container>
             <ng-container matColumnDef="fecha">
               <th mat-header-cell *matHeaderCellDef> Fecha </th>
               <td mat-cell *matCellDef="let item"> {{item.fecha}} </td>
