--- a/smart-exchange-frnt/src/app/cliente/operacion/operacion.component.sass
+++ b/smart-exchange-frnt/src/app/cliente/operacion/operacion.component.sass
@@ -13,7 +13,7 @@
     padding: 2px
 ::ng-deep .mat-step-header[aria-selected="true"]
     border-bottom: 2px solid #47be11
-.tranferencia
+.area-notificaciones
     border: 1px solid #cacaca
     text-align: justify
     border-radius: 0.5em
