--- a/smart-exchange-frnt/src/app/operaciones/clientes/clientes.component.html
+++ b/smart-exchange-frnt/src/app/operaciones/clientes/clientes.component.html
@@ -1,1 +1,68 @@
-<p>clientes works!</p>
+<br>
+<div class="contenido-clientes">
+    <form [formGroup]="busquedaFormGroup" (ngSubmit)="buscar()" autocomplete="off">
+        <mat-form-field appearance="outline">
+            <mat-label>Tipo búsqueda</mat-label>
+            <mat-select formControlName="tipoBusqueda">
+              <mat-option *ngFor="let item of tipoBusquedas" [value]="item.codigo">
+                {{item.nombre}}
+              </mat-option>
+            </mat-select>
+        </mat-form-field>
+        <mat-form-field appearance="outline">
+            <mat-label>Búsqueda</mat-label>
+            <input matInput type="text" formControlName="valor">
+        </mat-form-field>
+        <button mat-raised-button color="primary" [disabled]="estaCargando">
+            Buscar
+        </button>&nbsp;
+        <button mat-raised-button type="button" color="accent" (click)="recuperaClientesInicial()" [disabled]="estaCargando">
+            Limpiar filtros
+        </button>
+      </form>
+    <div class="tcTable">
+        <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+            <ng-container matColumnDef="fechaCreacion">
+                <th mat-header-cell *matHeaderCellDef> Fecha creación </th>
+                <td mat-cell *matCellDef="let item"> {{item.fechaCreacion | date: 'dd/MM/yyyy HH:mm'}} </td>
+              </ng-container>
+          <ng-container matColumnDef="nombres">
+            <th mat-header-cell *matHeaderCellDef> Nombres </th>
+            <td mat-cell *matCellDef="let item"> {{item.nombres}} </td>
+          </ng-container>
+            <ng-container matColumnDef="paterno">
+              <th mat-header-cell *matHeaderCellDef> Paterno </th>
+              <td mat-cell *matCellDef="let item"> {{item.paterno}} </td>
+            </ng-container>
+            <ng-container matColumnDef="materno">
+                <th mat-header-cell *matHeaderCellDef> Materno </th>
+                <td mat-cell *matCellDef="let item"> {{item.materno}} </td>
+            </ng-container>
+            <ng-container matColumnDef="documento">
+              <th mat-header-cell *matHeaderCellDef> Documento </th>
+              <td mat-cell *matCellDef="let item"> {{recuperaAbrevDoc(item.tipoDocumento)}} {{item.nroDocumento}} </td>
+            </ng-container>
+            <ng-container matColumnDef="telefono">
+              <th mat-header-cell *matHeaderCellDef> Telefono/Celular </th>
+              <td mat-cell *matCellDef="let item"> {{item.telefono}}  {{item.celular}} </td>
+            </ng-container>
+            <ng-container matColumnDef="estado">
+                <th mat-header-cell *matHeaderCellDef> Estado </th>
+                <td mat-cell *matCellDef="let item">
+                     <mat-slide-toggle [ngModel]="habilitado(item.estado)" (change)="cambiarEstado(item, $event.checked)" color="primary"><small>Habilitado</small></mat-slide-toggle>
+                </td>
+            </ng-container>
+            <ng-container matColumnDef="opciones">
+                <th mat-header-cell *matHeaderCellDef> </th>
+                <td mat-cell *matCellDef="let item">
+                <button (click)="validarCliente(item)" mat-mini-fab [color]="item.validado?'primary':'warn'" matTooltip="Datos validados">
+                    <mat-icon>verified</mat-icon>
+                </button>
+                </td>
+            </ng-container>
+            <tr mat-header-row *matHeaderRowDef="displayColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayColumns;"></tr>
+          </table>
+    </div>    
+    <mat-progress-bar *ngIf="estaCargando" mode="indeterminate"></mat-progress-bar>
+</div>
