--- a/smart-exchange-frnt/src/styles.sass
+++ b/smart-exchange-frnt/src/styles.sass
@@ -167,3 +167,7 @@ mat-form-field, mat-slide-toggle
     img
         width: 2em
         padding-right: 5px
+.mas-detalles
+    cursor: pointer
+    font-size: 1.2em
+    display: block
